--- a/package.yaml
+++ b/package.yaml
@@ -22,7 +22,8 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - text
-- haskell-src-exts
+- aeson
+- bytestring
 
 ghc-options:
 - -Wall
@@ -30,9 +31,7 @@ ghc-options:
 - -Widentities
 - -Wincomplete-record-updates
 - -Wincomplete-uni-patterns
-- -Wmissing-export-lists
 - -Wmissing-home-modules
-- -Wpartial-fields
 - -Wredundant-constraints
 - -Werror
 
